[package]
name = "rinha-de-backend-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.10"
tokio-postgres = "0.7.8"
serde = { version = "1", features = ["derive"] }
deadpool-redis = { version = "0.12", features = ["serde"] }
reqwest = "0.11"
futures = "0.3"